--- a/main.css
+++ b/main.css
@@ -1,36 +1,36 @@
 body {
-    background-color: rgb(229, 255, 240);
-    margin: 0;
+  background-color: rgb(229, 255, 240);
+  margin: 0;
 }
 
 #jumbotron {
-    background: rgb(205, 255, 234);
-    margin: 0;
+  background: rgb(205, 255, 234);
+  margin: 0;
 }
-#puffsImg{
-    filter: opacity(50%);
+#puffsImg {
+  filter: opacity(50%);
 }
 
 .appTitle {
-    font-family: 'Spectral', serif;
-    font-size: 70px;
-    font-weight: bolder;
-    color: rgb(41, 40, 134);
-    padding-left: 40%;
-    margin: 0;
-    
-    
+  font-family: 'Spectral', serif;
+  font-size: 70px;
+  font-weight: bolder;
+  color: rgb(41, 40, 134);
+  padding-left: 40%;
+  margin: 0;
+
+
 }
 #navbarDropdown {
-    background-color: rgb(80, 180, 147);
+  background-color: rgb(80, 180, 147);
 }
 #menuLabel1, #menuLabel2 {
-    color: rgb(10, 41, 9);
-    font-size: 30px;
-    border-radius: 25px;
-    background: rgb(214, 150, 60);
-    filter: drop-shadow(5px 5px 5px black);
-    /* padding: 0 250px 0 0; */
+  color: rgb(10, 41, 9);
+  font-size: 30px;
+  border-radius: 25px;
+  background: rgb(214, 150, 60);
+  filter: drop-shadow(5px 5px 5px black);
+  padding: 5px;
 }
 /* #menuLabel2 {
     color: aliceblue;
@@ -38,28 +38,28 @@ body {
     margin-right: 30px;
 } */
 .coldPrepHeading {
-    color: rgb(231, 244, 255);
-    background: rgb(64, 92, 141);
-    text-align: center;
-    border-radius: 50px;
+  color: rgb(231, 244, 255);
+  background: rgb(64, 92, 141);
+  text-align: center;
+  border-radius: 50px;
 }
 
-.card{
-    background: rgb(241, 241, 255);
-    border-radius: 75px 50px 75px 50px;
-    filter: drop-shadow(10px 10px 10px);
+.card {
+  background: rgb(241, 241, 255);
+  border-radius: 75px 50px 75px 50px;
+  filter: drop-shadow(10px 10px 10px);
 }
 .oystImg, .lobstImg {
-    border-radius: 50px 50px 50px 50px;
-    filter: drop-shadow(10px 10px 10px);
+  border-radius: 50px 50px 50px 50px;
+  filter: drop-shadow(10px 10px 10px);
 }
 .enterBtn {
-    border-radius: 30px;
-    filter: drop-shadow(10px 10px 10px rgb(46, 46, 48));
+  border-radius: 30px;
+  filter: drop-shadow(10px 10px 10px rgb(46, 46, 48));
 }
 
 .footer {
-    content: "\00A9";
-    color: aliceblue;
-    /* margin-top: px; */
+  content: "\00A9";
+  color: aliceblue;
+  /* margin-top: px; */
 }
