--- a/main.css
+++ b/main.css
@@ -3,23 +3,32 @@ body {
 }
 
 #jumbotron {
-    background: rgb(205, 255, 234);
+    background: rgb(39, 158, 65);
 }
 #puffsImg{
     filter: opacity(50%);
+    height: 70px;
+    width: 70px;
+
+}
+
+backBtn {
+    
 }
 
 .appTitle {
     font-family: 'Spectral', serif;
     font-size: 70px;
     font-weight: bolder;
-    color: rgb(41, 40, 134);
+    color: rgb(255, 255, 255);
     padding-left: 60%;
     
     
 }
 #navbarDropdown {
-    background-color: rgb(80, 180, 147);
+    /* background-color: rgb(255, 216, 216); */
+    background: linear-gradient(rgb(223, 229, 255), rgb(151, 151, 151));
+    /* margin: 0; */
 }
 #menuLabel1, #menuLabel2 {
     color: rgb(10, 41, 9);
@@ -28,6 +37,10 @@ body {
     background: rgb(214, 150, 60);
     filter: drop-shadow(5px 5px 5px black);
     /* padding: 0 250px 0 0; */
+}
+
+.prepList {
+
 }
 /* #menuLabel2 {
     color: aliceblue;
@@ -43,8 +56,9 @@ body {
 
 .card{
     background: rgb(241, 241, 255);
-    border-radius: 75px 50px 75px 50px;
+    border-radius: 5px 5px 5px 5px;
     filter: drop-shadow(10px 10px 10px);
+    padding: 20px;
 }
 .oystImg, .lobstImg {
     border-radius: 50px 50px 50px 50px;
