--- a/main.css
+++ b/main.css
@@ -1,10 +1,11 @@
 body {
   background-color: rgb(229, 255, 240);
-  margin: 0;
+  /* margin: 0; */
 }
 
 #jumbotron {
     background: rgb(39, 158, 65);
+    /* margin: 0; */
 }
 #puffsImg{
     filter: opacity(50%);
