--- a/main.css
+++ b/main.css
@@ -77,6 +77,7 @@ backBtn {
     margin-top: 5px;
     margin-bottom: 25px;
     filter: drop-shadow(5px 5px 5px black);
+    z-index: 1;
 
     /* margin: 0; */
 }
@@ -94,6 +95,7 @@ backBtn {
     filter: drop-shadow(5px 5px 5px rgb(87, 87, 87));
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 #menuLabel1, #menuLabel2 {
   color: rgb(0, 0, 0);
@@ -108,6 +110,21 @@ backBtn {
 text-align: center;
 font-size: 30px;
 }
+
+.prepTag {
+  border: 1px solid blue;
+  border-radius: 15px;
+  filter: drop-shadow(5px 5px 5px black);
+  background: linear-gradient(rgb(255, 253, 255), rgb(241, 101, 8));
+color: rgb(19, 23, 27);
+ width: 200px;
+ font-size: 20px;
+
+
+}
+#todayPrepCont {
+  color: aliceblue;
+}
 /* #menuLabel2 {
     color: aliceblue;
     font-size: 30px;
@@ -121,12 +138,13 @@ font-size: 30px;
 }
 
 .card{
-    background: rgb(241, 241, 255);
+    background: rgb(73, 90, 68);
     border-radius: 15px 15px 15px 15px;
-    filter: drop-shadow(10px 10px 10px);
+    filter: drop-shadow(10px 10px 10px black);
     padding: 20px;
     margin: 20px;
     text-align: center;
+    color: aliceblue;
 }
 .oystImg, .lobstImg {
   border-radius: 50px 50px 50px 50px;
