--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,4 +12,7 @@ html {
 
 body {
   box-sizing: border-box;
+  background: linear-gradient($color-primary, $background-color-main);
+  font-weight: 400;
+  line-height: 1rem;
 }
