continuing sass structure building UI

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,4 +15,5 @@ body {
   background: linear-gradient($color-primary, $background-color-main);
   font-weight: 400;
   line-height: 1rem;
+  font-family: 'Quicksand', sans-serif;
 }
