--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ body {
   box-sizing: border-box;
   background: linear-gradient(rgba(44, 124, 44, 0.5), rgba(93, 137, 139, 0.911));
   font-weight: 400;
-  line-height: 1rem; }
+  line-height: 1rem;
+  font-family: 'Quicksand', sans-serif; }
 
 @keyframes broccoliAnimation {
   0% {
@@ -25,6 +26,27 @@ body {
     left: 0; }
   100% {
     left: 0; } }
+
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(44, 124, 44, 0.5), rgba(39, 192, 39, 0.746));
+  background-size: cover;
+  background-position: top;
+  position: relative;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); }
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 2rem; }
+  .header__text--box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
 
 #broccoliImg {
   /* filter: opacity(75%); */
