--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@ body {
   background: linear-gradient(rgba(44, 124, 44, 0.5), rgba(93, 137, 139, 0.911));
   font-weight: 400;
   line-height: 1rem;
-  font-family: 'Quicksand', sans-serif; }
+  font-family: 'Quicksand', sans-serif;
+  padding: 1rem; }
 
 @keyframes broccoliAnimation {
   0% {
@@ -34,7 +35,9 @@ body {
   background-position: top;
   position: relative;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); }
+  clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  padding: 25rem;
+  box-shadow: 1rem 1rem 5rem black; }
   .header__logo-box {
     position: absolute;
     top: 4rem;
