--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+.section-start {
+  background-color: rgba(55, 129, 133, 0.911);
+  padding: 20rem; }
+
 *,
 *::after,
 *::before {
@@ -9,12 +13,7 @@ html {
   font-size: 62.5%; }
 
 body {
-  box-sizing: border-box;
-  background: linear-gradient(rgba(44, 124, 44, 0.5), rgba(93, 137, 139, 0.911));
-  font-weight: 400;
-  line-height: 1rem;
-  font-family: 'Quicksand', sans-serif;
-  padding: 1rem; }
+  box-sizing: border-box; }
 
 @keyframes broccoliAnimation {
   0% {
@@ -28,16 +27,54 @@ body {
   100% {
     left: 0; } }
 
+body {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.7;
+  background-color: #a1b6b8;
+  padding: 2rem; }
+
+.heading-primary {
+  display: inline-block;
+  color: #f0f7fa;
+  text-transform: uppercase;
+  text-shadow: 0.5rem 0.5rem 0.75rem #181616;
+  backface-visibility: hidden;
+  margin-bottom: 6rem;
+  -webkit-background-clip: text;
+  letter-spacing: 0.5rem; }
+  .heading-primary--main {
+    display: block;
+    font-size: 8rem; }
+
+.u-center-text {
+  text-align: center !important; }
+
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem !important; }
+
+.u-margin-bottom-mid {
+  margin-bottom: 4rem !important; }
+
+.u-margin-bottom-big {
+  margin-bottom: 8rem !important; }
+
+.u-margin-top-big {
+  margin-top: 8rem !important; }
+
+.u-margin-top-huge {
+  margin-top: 10rem !important; }
+
 .header {
-  height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(44, 124, 44, 0.5), rgba(39, 192, 39, 0.746));
+  height: 65vh;
+  background-image: linear-gradient(to right bottom, #27424b, #c9f1d0);
   background-size: cover;
   background-position: top;
   position: relative;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-  padding: 25rem;
-  box-shadow: 1rem 1rem 5rem black; }
+  clip-path: polygon(0 0, 80% 0, 100% 100%, 0 100%);
+  padding: 20rem; }
   .header__logo-box {
     position: absolute;
     top: 4rem;
@@ -51,123 +88,13 @@ body {
     transform: translate(-50%, -50%);
     text-align: center; }
 
-#broccoliImg {
-  /* filter: opacity(75%); */
-  height: 70px;
-  width: 70px;
+.icon {
   position: relative;
-  animation-name: broccoliAnimation;
-  animation-duration: 2s;
-  animation-timing-function: cubic-bezier(0.42, 0, 0.5, 1.61);
-  animation-fill-mode: forwards; }
-
-#knifeImg {
-  /* filter: opacity(75%); */
-  height: 70px;
-  width: 70px;
-  position: relative;
-  animation-name: broccoliAnimation;
-  animation-duration: 2s;
-  animation-timing-function: cubic-bezier(0.66, -0.18, 0.49, 2);
-  animation-fill-mode: forwards; }
-
-#onionImg {
-  /* filter: opacity(75%); */
-  height: 70px;
-  width: 70px;
-  position: relative;
-  animation-name: broccoliAnimation;
-  animation-duration: 2s;
-  animation-timing-function: cubic-bezier(0.59, 0.15, 0.55, 1.46);
-  animation-fill-mode: forwards; }
-
-.appTitle {
-  font-family: "Spectral", serif;
-  font-size: 70px;
-  font-weight: bolder;
-  color: white;
-  /* padding-left: 60%; */ }
-
-#navbarDropdown {
-  /* background-color: rgb(255, 216, 216); */
-  background: linear-gradient(#fffdff, #464444);
-  border-radius: 15px;
-  margin-top: 5px;
-  margin-bottom: 25px;
-  filter: drop-shadow(5px 5px 5px black);
-  z-index: 1;
-  /* margin: 0; */ }
-
-.stoveKnob {
-  height: 50px;
-  filter: drop-shadow(10px 10px 10px black);
-  margin: 15px; }
-
-.recipeList {
-  /* margin: 20px; */
-  border-radius: 10px;
-  border: 2px solid #ebff38;
-  filter: drop-shadow(5px 5px 5px #575757);
-  margin: 0;
-  padding: 0;
-  text-align: center; }
-
-#menuLabel1,
-#menuLabel2 {
-  color: black;
-  font-size: 20px;
-  border-radius: 15px;
-  background: #eb9d30;
-  filter: drop-shadow(5px 5px 5px black);
-  padding: 10px; }
-
-.prepListTitle {
-  text-align: center;
-  font-size: 30px; }
-
-.prepTag {
-  border: 1px solid blue;
-  border-radius: 15px;
-  filter: drop-shadow(5px 5px 5px black);
-  background: linear-gradient(#fffdff, #f16508);
-  color: #13171b;
-  width: 200px;
-  font-size: 20px;
-  position: relative; }
-
-#todayPrepCont {
-  color: aliceblue; }
-
-/* #menuLabel2 {
-    color: aliceblue;
-    font-size: 30px;
-    margin-right: 30px;
-} */
-.coldPrepHeading {
-  color: #e7f4ff;
-  background: #405c8d;
-  text-align: center;
-  border-radius: 50px; }
-
-.card {
-  background: #495a44;
-  border-radius: 15px 15px 15px 15px;
-  filter: drop-shadow(10px 10px 10px black);
-  padding: 20px;
-  margin: 20px;
-  text-align: center;
-  color: aliceblue; }
-
-.oystImg,
-.lobstImg {
-  border-radius: 50px 50px 50px 50px;
-  filter: drop-shadow(10px 10px 10px); }
-
-.enterBtn {
-  border-radius: 30px;
-  filter: drop-shadow(10px 10px 10px #2e2e30); }
-
-.footer {
-  content: "\00A9";
-  color: aliceblue;
-  /* margin-top: px; */ }
+  display: block; }
+  .icon__broccoli {
+    top: 2rem;
+    width: 10%;
+    animation-name: broccoliAnimation;
+    animation-duration: 2s;
+    animation-timing-function: cubic-bezier(0.42, 0, 0.5, 1.61);
+    animation-fill-mode: forwards; }
