--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,4 +1,34 @@
-$color-primary: rgba(44, 124, 44, .5);
-$color-secondary: rgba(39, 192, 39, 0.746);
+$color-white: rgb(255, 255, 255);
+$color-black: rgb(0, 0, 0);
 
-$background-color-main:  rgba(93, 137, 139, 0.911);
+//text color
+$text-color-main: rgb(240, 247, 250);
+
+$color-gray-light: rgb(175, 175, 175);
+$color-gray-dark: rgb(95, 95, 95);
+
+$color-primary: rgb(201, 241, 208);
+$color-secondary: rgb(39, 66, 75);
+$color-tertiary: rgba(39, 123, 192, 0.856);
+
+$color-background-main: rgb(161, 182, 184);
+$color-background-secondary: rgba(55, 129, 133, 0.911);
+$color-background-tertiary: rgba(121, 93, 139, 0.911);
+
+//Shadows
+$color-shadow-dark: rgb(24, 22, 22);
+$color-shadow-light: rgb(65, 65, 65);
+$text-shadow-dark: 0.5rem 0.5rem 0.75rem rgb(24, 22, 22);
+$text-shadow-light: 0.5rem 0.5rem 2rem rgb(65, 65, 65);
+$box-shadow-light: 0.5rem 0.5rem 2rem rgb(65, 65, 65);
+$box-shadow-dark: 0.5rem 0.5rem 2rem rgb(27, 27, 27);
+
+//font
+$default-font-size: 1.6rem;
+
+//Gradients
+$linear-gradient-primary: linear-gradient(
+  to right bottom,
+  $color-background-secondary,
+  $color-background-main
+);
