--- a/sass/components/_images.scss
+++ b/sass/components/_images.scss
@@ -1,38 +1,41 @@
 .icon {
   position: relative;
   display: block;
-//   width:25%;
-//   height: 25%;
+  // width: 50%;
+  // height: 50%;
+  bottom: 15rem;
+  left: 5rem;
 
   &__broccoli {
-      top: 2rem;
-      width: 10%;
+    top: 2rem;
+    // left: 2rem;
+    width: 10%;
+    position: relative;
+    animation-name: broccoliAnimation;
+    animation-duration: 5s;
+    animation-timing-function: cubic-bezier(0.42, 0, 0.5, 1.61);
+    animation-fill-mode: forwards;
+  }
 
-      animation-name: broccoliAnimation;
-  animation-duration: 2s;
-  animation-timing-function: cubic-bezier(0.42, 0, 0.5, 1.61);
-  animation-fill-mode: forwards;
+  &__knife {
+    top: 2rem;
+    // left: 2rem;
+    width: 10%;
+    position: relative;
+    animation-name: broccoliAnimation;
+    animation-duration: 6s;
+    animation-timing-function: cubic-bezier(0.42, 0, 0.5, 1.61);
+    animation-fill-mode: forwards;
+  }
+
+  &__onion {
+    top: 2rem;
+    // left: 2rem;
+    width: 10%;
+    position: relative;
+    animation-name: broccoliAnimation;
+    animation-duration: 7s;
+    animation-timing-function: cubic-bezier(0.42, 0, 0.5, 1.61);
+    animation-fill-mode: forwards;
   }
 }
-
-// }
-
-// #knifeImg {
-//   height: 70px;
-//   width: 70px;
-//   position: relative;
-//   animation-name: broccoliAnimation;
-//   animation-duration: 2s;
-//   animation-timing-function: cubic-bezier(0.66, -0.18, 0.49, 2);
-//   animation-fill-mode: forwards;
-// }
-
-// #onionImg {
-//   height: 70px;
-//   width: 70px;
-//   position: relative;
-//   animation-name: broccoliAnimation;
-//   animation-duration: 2s;
-//   animation-timing-function: cubic-bezier(0.59, 0.15, 0.55, 1.46);
-//   animation-fill-mode: forwards;
-// }
