--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,6 +11,7 @@
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
   clip-path: polygon(0 0, 80% 0, 100% 100%, 0 100%);
   padding: 20rem;
+  border-radius: 1rem;
 
   &__logo-box {
     position: absolute;
