--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,9 +1,6 @@
 .section-start {
   background-color: $color-background-secondary;
   padding: 20rem;
-  // margin-bottom: 10rem;
-  //   margin-top: -1vh;
-  //   z-index: 0;
-
-  //   clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%);
+  margin-top: -1vh;
+  border-radius: 1rem;
 }
