--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,6 @@
 @import "layout/header";
 @import "layout/grid";
 @import "layout/footer";
-
+@import "layout/dailypreplist";
 
 @import "components/images";
