--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,16 +9,16 @@ $color-gray-dark: rgb(95, 95, 95);
 
 $color-primary: rgb(201, 241, 208);
 $color-secondary: rgb(39, 66, 75);
-$color-tertiary: rgba(39, 123, 192, 0.856);
+$color-tertiary: rgb(149, 241, 241);
 
-$color-background-main: rgb(161, 182, 184);
-$color-background-secondary: rgba(55, 129, 133, 0.911);
-$color-background-tertiary: rgba(121, 93, 139, 0.911);
+$color-background-main: rgb(107, 132, 134);
+$color-background-secondary: rgba(15, 114, 119, 0.966);
+$color-background-tertiary: rgba(243, 242, 243, 0.911);
 
 //Shadows
 $color-shadow-dark: rgb(24, 22, 22);
 $color-shadow-light: rgb(65, 65, 65);
-$text-shadow-dark: 0.5rem 0.5rem 0.75rem rgb(24, 22, 22);
+$text-shadow-dark: 0.3rem 0.3rem 0.45rem rgb(24, 22, 22);
 $text-shadow-light: 0.5rem 0.5rem 2rem rgb(65, 65, 65);
 $box-shadow-light: 0.5rem 0.5rem 2rem rgb(65, 65, 65);
 $box-shadow-dark: 0.5rem 0.5rem 2rem rgb(27, 27, 27);
