--- a/sass/layout/_dailypreplist.scss
+++ b/sass/layout/_dailypreplist.scss
@@ -54,6 +54,7 @@
   &__link {
     &:link,
     &:visited {
+      text-shadow: $text-shadow-dark;
       display: inline-block;
       font-size: 3rem;
       font-weight: 300;
@@ -65,7 +66,7 @@
         120deg,
         transparent 0%,
         transparent 50%,
-        $color-white 50%
+        $color-tertiary 50%
       );
       background-size: 230%;
       transition: all 0.4s;
@@ -79,7 +80,7 @@
     &:hover,
     &:active {
       background-position: 100%;
-      color: $color-gray-dark;
+      color: $color-black;
       transform: translateX(1rem);
     }
   }
