--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,7 @@ body {
   font-weight: 400;
   font-size: $default-font-size;
   line-height: 1.7;
-  background-color: $color-background-main;
+  background-color: $color-background-tertiary;
   padding: 2rem;
 }
 .heading-primary {
