--- a/sass/components/_images.scss
+++ b/sass/components/_images.scss
@@ -10,6 +10,8 @@
     top: 2rem;
     // left: 2rem;
     width: 10%;
+    padding: 2rem;
+
     position: relative;
     animation-name: broccoliAnimation;
     animation-duration: 4s;
@@ -22,6 +24,8 @@
 
     // left: 2rem;
     width: 10%;
+  padding: 2rem;
+
     position: relative;
     animation-name: broccoliAnimation;
     animation-duration: 5s;
@@ -33,6 +37,8 @@
     top: 12rem;
     // left: 2rem;
     width: 10%;
+  padding: 2rem;
+
     position: relative;
     animation-name: broccoliAnimation;
     animation-duration: 7s;
