--- a/sass/layout/_dailypreplist.scss
+++ b/sass/layout/_dailypreplist.scss
@@ -14,6 +14,8 @@
     border-radius: 50%;
     z-index: 2000;
     box-shadow: $box-shadow-dark;
+    text-align: center;
+    cursor: pointer;
   }
 
   &__background {
@@ -88,7 +90,7 @@
       transform: translateX(1rem);
     }
   }
-
+  //Functionality
   &__checkbox:checked ~ &__background {
     transform: scale(80);
   }
@@ -96,5 +98,57 @@
     // transform: scale(80);
     opacity: 1;
     width: 100%;
+  }
+
+  //Icon over prep list button
+
+  &__icon {
+    position: relative;
+    margin-top: 3.5rem;
+    &,
+    &::before,
+    &::after {
+      width: 3rem;
+      height: 2px;
+      background-color: $color-gray-dark;
+      display: inline-block;
+    }
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      transition: all 0.6s;
+    }
+
+    &::before {
+      top: -0.8rem;
+    }
+    &::after {
+      top: 0.8rem;
+    }
+  }
+
+  &__button:hover &__icon::before {
+    top: -1rem;
+  }
+
+  &__button:hover &__icon::after {
+    top: 1rem;
+  }
+
+  &__checkbox:checked + &__button &__icon {
+    background-color: transparent;
+  }
+
+  &__checkbox:checked + &__button &__icon::before {
+    top: 0;
+    transform: rotate(135deg);
+  }
+
+  &__checkbox:checked + &__button &__icon::after {
+    top: 0;
+    transform: rotate(-135deg);
   }
 }
