--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,5 @@
 .section-start {
-  background-color: $color-background-secondary;
+  background-color: $color-secondary;
   padding: 20rem;
   margin-top: -1vh;
   border-radius: 1rem;
