--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,6 +12,8 @@ $color-secondary: rgb(39, 66, 75);
 $color-tertiary: rgb(149, 241, 241);
 
 $color-background-main: rgb(107, 132, 134);
+$color-background-bright: rgb(231, 246, 246);
+
 $color-background-secondary: rgba(15, 114, 119, 0.966);
 $color-background-tertiary: rgba(192, 224, 250, 0.911);
 
